--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 # Configuration file
-# key = value
+## Logging
+quarkus.log.console.enable=true
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console.level=DEBUG
+quarkus.log.console.color=false
+quarkus.log.category."io.quarkus".level=INFO
+quarkus.log.category."me.javigs82".level=ALL
