--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,6 @@
 ## Logging
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
-quarkus.log.console.level=INFO
+quarkus.log.console.level=DEBUG
 quarkus.log.console.color=false
-quarkus.log.category."me.javigs82".level=ALL
+quarkus.log.category."me.javigs82".level=DEBUG
